--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,74 @@ h1 {
 }*/
 
 .memory-card {
+  z-index: 6;
   border: 1px solid wheat;
   height: 100px;
-  width: 100px;   
-  background-image: url("Ressources/Images/vichy-bleu-410px.jpg");
+  width: 100px;    
   background-size: contain;
+  transition: transform 0.3s; 
+}
+
+.memory-card:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+/*----Faces----*/
+.f1 {
+  background-image: url("Ressources/Images/Paires/1.jpg");
+}
+
+.f2 {
+  background-image: url("Ressources/Images/Paires/2.jpg");
+}
+
+.f3 {
+  background-image: url("Ressources/Images/Paires/3.jpg");
+}
+
+.f4 {
+  background-image: url("Ressources/Images/Paires/4.jpg");
+}
+
+.f5 {
+  background-image: url("Ressources/Images/Paires/5.jpg");
+}
+
+.f6 {
+  background-image: url("Ressources/Images/Paires/6.jpg");
+}
+
+.f7 {
+  background-image: url("Ressources/Images/Paires/7.jpg");
+}
+
+.f8 {
+  background-image: url("Ressources/Images/Paires/8.jpg");
+}
+
+
+
+/*----Fonds----*/
+.vichy-bleu {
+  background-image: url("Ressources/Images/Fonds/vichy-bleu.jpg");
+}
+
+.japonais-rouge {
+  background-image: url("Ressources/Images/Fonds/japonais-rouge.jpg");
+}
+
+.tartan-noir {
+  background-image: url("Ressources/Images/Fonds/tartan-noir.jpg");
+}
+
+.tarot-noir {
+  background-image: url("Ressources/Images/Fonds/tarot-noir.jpg");
+}
+
+
+.black {
+  background-image: url("Ressources/Images/Fonds/black.jpg");
 }
 
 .found-pairs {
@@ -43,9 +106,7 @@ h1 {
   min-height: 5rem;   
 }
 
-
-
-/*-------Title*/
+/*----Title----*/
 #bigger-font {
   font-size: 6.5rem;
 }
@@ -58,4 +119,9 @@ h1 {
 
 #rules {
   cursor: pointer;
+  transition: transform 0.3s;
+}
+
+#rules:hover {
+  transform: scale(1.1);
 }
