--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ h1 {
   transform: scale(1.1);
 }
 
+.no-click {
+  pointer-events: none;
+}
+
 /*----Faces----*/
 .f1 {
   background-image: url("Ressources/Images/Paires/1.jpg");
